Add nf-core branding: favicons, logos, and social share images

--- a/assets/templates/error.html
+++ b/assets/templates/error.html
@@ -33,11 +33,11 @@
 <body>
     <div class="container">
         <h1>Access Denied</h1>
-        <p>You must be a member of the <strong>nf-core</strong> GitHub organization to access this hackathon.</p>
-        <p>If you're already an nf-core member, make sure your membership is set to <strong>public</strong>:<br>
+        <p>You must be a member of the <a href="https://github.com/nf-core" target="_blank">nf-core</a> GitHub organization to access this hackathon.</p>
+        <p>If you're already an nf-core member, make sure your membership is set to <strong>public</strong>:
         <a href="https://github.com/orgs/nf-core/people" target="_blank">https://github.com/orgs/nf-core/people</a></p>
-        <p>Need to join nf-core? Visit <a href="https://nf-co.re/join" target="_blank">nf-co.re/join</a><br>
-        Then go to the <strong>#github-invitations</strong> channel in Slack to request access.</p>
+        <p>Need to join nf-core? Visit <a href="https://nf-co.re/join" target="_blank">nf-co.re/join</a> to access the nf-core Slack,<br>
+        then go to the <a href="https://nfcore.slack.com/archives/CEB982K2T" target="_blank"><code>#github-invitations</code></a> channel to request access.</p>
         <a href="/" class="button">Try Again</a>
     </div>
 </body>
